# qt_main_template

./: CMakeLists.txt  main.cpp
bash/: make_code_file.py
util/: Tvlog.h
wid/: widget.cpp  widget.h
wid/button/: wid_button.cpp  wid_button.h
wid/lab/: wid_lab.cpp  wid_lab.h
window/: main_window.cpp  main_window.h
window/wid_left/: wid_left.cpp  wid_left.h
window/wid_right/: wid_right.cpp  wid_right.h
